# Motion3D

./: .gitignore  CMakeLists.txt  README.md
shaders/: base.frag.glsl  base.vert.glsl  light.frag.glsl  light.vert.glsl  lightCube.frag.glsl
src/: camera.cpp  camera.hpp  cube.cpp  cube.hpp  light.cpp  light.hpp  main.cpp  shaderProgram.cpp  shaderProgram.hpp  shaders.cpp  shaders.hpp
